Bug Fixes
-added a fix for Firefox gradients not showing up
-added outline: none (forgot it earlier)

--- a/assets/css/sass/_goodbutton.sass
+++ b/assets/css/sass/_goodbutton.sass
@@ -3,7 +3,7 @@
 // tweak these variables to get the style you want
 // -----------------------------------------------------------------------------------------
 
-$base-color: #ff6600
+$base-color: #33bbaa
 $label-color: #fff
 $label-font: lucida sans, sans-serif
 $label-font-size: 1em
@@ -29,6 +29,7 @@ $label-shadow-down: false // only make true for light buttons
 
 =goodbtn
   border: none
+  outline: none
   display: block
   cursor: pointer
   padding: .5em 3em
@@ -38,15 +39,18 @@ $label-shadow-down: false // only make true for light buttons
   font-family: $label-font
   font-size: $label-font-size
   box-shadow: inset 0 1px 0 0 rgba(black, .1), inset 0 -1px 0 0 rgba(black, .2), inset 1px 0 0 0 rgba(black, .2), inset -1px 0 0 0 rgba(black, .2), 0 1px 0 0 rgba(black, .1)
-  +background-image(linear-gradient(tint($base-color, 20%) 0, shade($base-color, 10%) 100%))
+  +background-image(linear-gradient(tint($base-color, 15%) 0, shade($base-color, 15%) 100%))
+  background: -moz-linear-gradient(-90deg, tint($base-color, 15%), shade($base-color, 15%))
   +labelshadowup
   +labelshadowdown
-
+  
   &:hover
-    +background-image(linear-gradient(tint($base-color, 10%) 0, tint(shade($base-color, 20%), 10%) 100%))
+    +background-image(linear-gradient(tint($base-color, 20%) 0, shade($base-color, 20%) 100%))
+    background: -moz-linear-gradient(-90deg, tint($base-color, 20%), shade($base-color, 20%))
 
   &:active
     color: shade($label-color, 10%)
     box-shadow: inset 0 1px 2px 0 rgba(black, .3), inset 0 -1px 0 0 rgba(black, .1), inset 1px 0 0 0 rgba(black, .2), inset -1px 0 0 0 rgba(black, .2)
     +background-image(linear-gradient(shade($base-color, 30%) 0, shade($base-color, 20%) 100%))
+    background: -moz-linear-gradient(-90deg, shade($base-color, 30%), shade($base-color, 20%))
     +transform(translateY(1px))
